--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,3 +14,13 @@ h1 {
     color: aquamarine;
     font-size: 16px;
 }
+
+h2 {
+	font-weight: 300;
+	font-size: 42px;
+}
+
+p {
+	font-size: 21px;
+	color: gray;
+}
